K8S/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: api-image
        imagePullPolicy: Never # ensures that Kubernetes does not attempt to pull the image from a remote registry.
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 80
